# LLM-Inference-Engine

./: .gitignore  CMakeLists.txt  CUDA_MEMORY_ALLOCATION_FIX.md  FLASH_ATTENTION_DEPLOYMENT.md  INTERVIEW.md  README.md  REPLICATION_GUIDE.md  TESTING_SUMMARY.md  autodl_setup.sh  test_zero_allocation.cpp
cmake/: CPM.cmake
kuiper/include/base/: cuda_config.h  kv_cache_manager.h  nccl_handler.h
kuiper/include/model/: llama3.h  model.h
kuiper/include/op/: flash_attention.h  matmul.h
kuiper/source/base/: alloc.cpp  alloc_cu.cpp  buffer.cpp  kv_cache_manager.cpp  nccl_handler.cpp
kuiper/source/model/: llama3.cpp  model.cpp
kuiper/source/op/: flash_attention.cpp  matmul.cpp
kuiper/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
kuiper/source/op/kernels/cpu/: flash_attention_kernel.cpp  flash_attention_kernel.h
kuiper/source/op/kernels/cuda/: flash_attention_kernel.cu  flash_attention_kernel.cuh  rmsnorm_kernel.cu
kuiper/source/tensor/: tensor.cpp
reports/: 01_distributed_inference.md  02_memory_optimization.md  03_performance_tuning.md  04_test_verification.md  05_nccl_timeout_handling.md  06_int8_memory_analysis.md  07_benchmark_report.md  08_flash_attention_integration.md  09_flash_attention_testing_results.md  10_flash_attention_cuda_kernel_issues.md  11_flashattention_interview_guide.md  11_flashattention_versions_and_implementations.md
scripts/: rigorous_performance_test.sh  simple_performance_test.sh  verify_flash_attention.sh  zero_dependency_test.sh
test/: test_nccl.cpp
test/test_op/: test_flash_attention.cpp
tools/: benchmark_memory.sh
